--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
         
         <label for="pass">Password</label>
         <input minlength="8" name="pass" type="password" id=pass>
+        <select name="age" id="age">
+            <option value="below 18">below 18</option>
+            <option value="18-24">18-24</option>
+        </select>
         <button type="submit">Submit</button>
     </form>
 </body>
