--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     
-    <h1>Something interesting is goning to happen</h1>
+    <h1>Something interesting is goning to happen!!</h1>
     <img width="500" height="400" src="/img/home.jpg" alt="winter">
     <br>
     <br>
