--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     
     <h1>Something interesting is goning to happen!!</h1>
-    <img width="500" height="400" src="/img/home.jpg" alt="winter">
+    <img src="/img/home.jpg" alt="winter">
     <br>
     <br>
     <form >
