--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     
-    <h1>Something interesting is goning to happen!!</h1>
+    <h1>Something interesting is goning to happen!!(not sure)</h1>
     <img src="/img/home.jpg" alt="winter">
     <br>
     <br>
