--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     
     <h1>Something interesting is goning to happen!!(not sure)</h1>
-    <img src="img/home.jpg" alt="winter">
+    <img style="height: 512; width: 512;" src="img/home.jpg" alt="winter">
     <br>
     <br>
     <form >
