--- a/index.html
+++ b/index.html
@@ -8,11 +8,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
     <title>First Page</title>
+    <style>
+        img{
+            height: 512px;
+            width: 512px;
+        }
+    </style>
 </head>
 <body>
     
     <h1>Something interesting is goning to happen!!(not sure)</h1>
-    <img style="height: 512; width: 512;" src="img/home.jpg" alt="winter">
+    <img src="img/home.jpg" alt="winter">
     <br>
     <br>
     <form >
